PresentGlama/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
    font-family: "Helvetica",Arial, sans-serif;
    margin: 2rem auto;
}
textarea.user-input{
    width:100%;
}
#chat {
    border: 1px solid #ddd;
    padding: 1rem;
    height: 400px;
    overflow-y: auto;
}

.message {
    margin: 0.5rem 0;
}

.user {
    color: navy;
    background: #daded5;
    border-radius: 8px;
    padding: .1% .6rem;
}

.assistant {
    background: #e2e0ee;
    padding: .2rem .4rem;
    border-radius: 10px;
}
body.dark {
    background: #111;
    color: #f2faf9;
}
.dark textarea.user-input {
    background: #222;
    color:ghostwhite;
}
.dark #chat {
    border: 1px solid #3a3a3a;
}
.dark .user {
    color: #dddad9;
    background: #2a2a02;
}

.dark .assistant {
    background: #323049;
    color: #d1d3d2;
}

